[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "langchain-predictionguard"
version = "0.3.0"
authors = [
    {name="Jacob Mansdorfer", email="jacob@predictionguard.com"}
]
description = "Create controlled and compliant AI systems with PredictionGuard and LangChain"
description-file = "README.md"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "langchain-core>=1.2.13",
    "predictionguard>=2.10.0",
]

[project.urls]
Homepage = "https://predictionguard.com"
Documentation = "https://docs.langchain.com/oss/python/integrations/providers/predictionguard"
Repository = "https://github.com/predictionguard/langchain-predictionguard.git"
Issues = "https://github.com/predictionguard/langchain-predictionguard/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]