[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "langchain-predictionguard"
version = "0.3.1"
authors = [
    {name="Jacob Mansdorfer", email="jacob@predictionguard.com"}
]
description = "Create controlled and compliant AI systems with PredictionGuard and LangChain"
description-file = "README.md"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "langchain-core==1.3.3",
    "predictionguard==2.11.1",
]

[tool.uv]
exclude-newer = "2026-05-08T12:33:43.000+00:00"
exclude-newer-package = { idna = "2026-05-13T19:45:44.44Z", lanmarkupsafe = false }

[tool.uv.pip]
require-hashes = true

[project.urls]
Homepage = "https://predictionguard.com"
Documentation = "https://docs.langchain.com/oss/python/integrations/providers/predictionguard"
Repository = "https://github.com/predictionguard/langchain-predictionguard.git"
Issues = "https://github.com/predictionguard/langchain-predictionguard/issues"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.12",
]